bug fix fixed project title taking up too much card space

--- a/style.css
+++ b/style.css
@@ -273,14 +273,20 @@ background-color: transparent;
     border-radius: 10px;
     background: linear-gradient(to right,var(--project-card-side-color) 2%, var(--main-color) 0%);
     background-color: var(--main-color);
-    padding: 0px 5px 0px 20px;
+    padding: 10px 5px 0px 20px;
     box-shadow: 4px 5px 6px 2px rgb(169, 169, 169);
 }
 
+.projects > div{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
 
 .projects p{
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 1rem;
+    height: 100px;
     
 }
 
